--- a/src/co-vet/co-vet-ai-training.html
+++ b/src/co-vet/co-vet-ai-training.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <div>⬅️<a href="../index.html">🏠</a>(this works)</div>
+        <div>⬅️<a href="../../index.html">🏠</a>(this works)</div>
         <div>menu icon (soon) ➡️</div>
       </nav>
       <h1>KAH Staff</h1>
@@ -19,13 +19,13 @@
       <h4>Co-Vet AI</h4>
       <ul class="content-list">
         <li><a href="rec-videos.html">Recommended videos</a></li>
-        <li><a href="soap-questions-prompts.html">Prompts & SOAP Questions</a> (open in exam
-          room)
+        <li>
+          <a href="soap-questions-prompts.html">Prompts & SOAP Questions</a>
+          (open in exam room)
         </li>
         <li><a href="co-vet-other.html">Other materials </a></li>
       </ul>
 
-      
       <hr />
 
       <p>
