--- a/src/co-vet/rec-videos.html
+++ b/src/co-vet/rec-videos.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <div>⬅️<a href="../index.html">🏠</a>(this works)</div>
+        <div>⬅️<a href="../../../../../index.html">🏠</a>(this works)</div>
         <div>menu icon (soon) ➡️</div>
       </nav>
       <h1>KAH Staff</h1>
