--- a/index.html
+++ b/index.html
@@ -1,43 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>KAH Staff Training/Reference Guide | Home</title>
+
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- end Google fonts -->
+
+    <!-- my style sheet(s) -->
     <link rel="stylesheet" href="styles.css" />
-    <title>KAH Staff Training/Reference Guide</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <div>⬅️<a href="index.html">🏠</a></div>
-        <div>menu icon (soon) ➡️</div>
-        <!--  link collection for nav bar menu
-        <a href="index.html">Home</a>
-        <a href="co-vet/co-vet-ai-training.html">Co-Vet AI</a>
-          <a href="co-vet/rec-videos.html">Recommended Videos</a>
-          <a href="co-vet/soap-questions-prompts.html">Prompts & SOAP questions</a>
-          <a href="co-vet/co-vet-other.html"></a>
-        -->
-      </nav>
-      <h1>KAH Staff</h1>
-      <h2>Training/Reference Guide</h2>
-    </header>
-    <aside>
-      <h3>Latest Updates (Dev Notes):</h3>
-      <p>
-        AMR 10/19/24 6:46pm: Initial launch of new site will feature a bare
-        bones design in order to prioritize making training materials available
-        quickly. Stay tuned for more sections and design upgrades soon.
-      </p>
-    </aside>
-    <main>
-      <h4>Training/Reference Materials</h4>
-      <ul class="content-list">
-        <li><a href="/src/co-vet/co-vet-ai-training.html">Co-Vet AI</a></li>
-      </ul>
-
-      <hr />
-
+    <header></header>
+    <main></main>
+    <footer>
       <p>
         Page/Site Issues/Questions? Make a pull request on our
         <a
@@ -49,9 +30,51 @@
         >
         or <a href="mailto:amie.romano79@gmail.com">email me</a>😉
       </p>
-    </main>
-    <footer>
       <p>&#169; 2024 KAH Staff Training/Reference Guide</p>
     </footer>
   </body>
 </html>
+
+<!--    
+   
+    <header>
+      <nav>
+        <div>⬅️<a href="index.html">🏠</a></div>
+        <div>menu icon (soon) ➡️</div>  -->
+
+<!--  link collection for nav bar menu
+        <a href="index.html">Home</a>
+        <a href="co-vet/co-vet-ai-training.html">Co-Vet AI</a>
+          <a href="co-vet/rec-videos.html">Recommended Videos</a>
+          <a href="co-vet/soap-questions-prompts.html">Prompts & SOAP questions</a>
+          <a href="co-vet/co-vet-other.html"></a>
+        -->
+
+<!--        
+      </nav>
+      <h1>KAH Staff</h1>
+      <h2>Training/Reference Guide</h2>
+    </header>
+    <main>
+      <aside>
+        <h3>Latest Updates (Dev Notes):</h3>
+        <p>
+          AMR 10/19/24 6:46pm: Initial launch of new site will feature a bare
+          bones design in order to prioritize making training materials
+          available quickly. Stay tuned for more sections and design upgrades
+          soon.
+        </p>
+      </aside>
+      <section>
+        <h4>Training/Reference Materials</h4>
+        <ul class="content-list">
+          <li><a href="/src/co-vet/co-vet-ai-training.html">Co-Vet AI</a></li>
+        </ul>
+      </section>
+    </main>
+   
+  
+
+
+
+-->
