updated main nav bar and footer

--- a/index.html
+++ b/index.html
@@ -7,42 +7,30 @@
     <title>KAH Staff Training/Reference Guide | Home</title>
 
     <!--Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- end Google fonts -->
 
     <!-- my style sheet(s) -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer>
-      <p>
-        Page/Site Issues/Questions? Make a pull request on our
-        <a
-          href="https://github.com/ARomano79/KAH-Staff-Reference-Guide"
-          target="_blank"
-          rel="noopener"
-        >
-          GitHub Repo</a
-        >
-        or <a href="mailto:amie.romano79@gmail.com">email me</a>😉
-      </p>
-      <p>&#169; 2024 KAH Staff Training/Reference Guide</p>
-    </footer>
-  </body>
-</html>
-
-<!--    
-   
     <header>
       <nav>
-        <div>⬅️<a href="index.html">🏠</a></div>
-        <div>menu icon (soon) ➡️</div>  -->
-
-<!--  link collection for nav bar menu
+        <div>
+          <a href="index.html"><img src="/src/home-icon2.png" alt="home icon" class="home-button" id="home-button"></a>
+        </div>
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">&#9776</button>
+          
+          <div id="myDropdown" class="dropdown-content">
+            <a href="/src/co-vet/co-vet-ai-training.html">Co-Vet AI</a>
+          
+            <!--  link collection for nav bar menu - replace above with these... 
         <a href="index.html">Home</a>
         <a href="co-vet/co-vet-ai-training.html">Co-Vet AI</a>
           <a href="co-vet/rec-videos.html">Recommended Videos</a>
@@ -50,31 +38,49 @@
           <a href="co-vet/co-vet-other.html"></a>
         -->
 
-<!--        
+
+          </div>
+        </div> 
       </nav>
-      <h1>KAH Staff</h1>
-      <h2>Training/Reference Guide</h2>
+
+      <section id="hero">
+        <h1>KAH Staff</h1>
+        <h2>Training/Reference Guide</h2>
+      </section>
     </header>
+
+
+
     <main>
       <aside>
         <h3>Latest Updates (Dev Notes):</h3>
         <p>
-          AMR 10/19/24 6:46pm: Initial launch of new site will feature a bare
+          AMR 10/28/24 9:59am: Initial launch of new site will feature a bare
           bones design in order to prioritize making training materials
           available quickly. Stay tuned for more sections and design upgrades
           soon.
         </p>
       </aside>
-      <section>
-        <h4>Training/Reference Materials</h4>
-        <ul class="content-list">
-          <li><a href="/src/co-vet/co-vet-ai-training.html">Co-Vet AI</a></li>
-        </ul>
-      </section>
+
+
+
     </main>
-   
-  
-
-
-
--->
+    <footer>
+      <section>
+        <p>
+          Page/Site Issues/Questions? Make a pull request on our
+          <a
+            href="https://github.com/ARomano79/KAH-Staff-Reference-Guide"
+            target="_blank"
+            rel="noopener"
+          >
+            GitHub Repo</a
+          >
+          or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
+        </p>
+      </section>
+      <p>&#169; &#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
+    </footer>
+  </body>
+  <script src="/src/main.js"></script>
+</html>
