updated dev msg

--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
       <aside>
         <h3>Latest Updates (Dev Notes):</h3>
         <p>
-          AMR 10/28/24 9:59am: Initial launch of new site will feature a bare
-          bones design in order to prioritize making training materials
-          available quickly. Stay tuned for more sections and design upgrades
-          soon.
+          AMR 10/28/24 9:59am: Initial launch of new site will feature a minimalist design in an effort to prioritize function over aesthetics.  
+          available quickly.  It will be both pretty and useful someday... 
         </p>
       </aside>
 
@@ -77,7 +75,7 @@
             GitHub Repo</a
           >
           or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
-        </p>
+        </p>order to prioritize making training materials
       </section>
       <p>&#169; &#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
     </footer>
