removed duplicate copyright symbol and major updates to everything but the soap pages.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
       <aside>
         <h3>Latest Updates (Dev Notes):</h3>
         <p>
-          AMR 10/28/24 9:59am: Initial launch of new site will feature a minimalist design in an effort to prioritize function over aesthetics.  
-          available quickly.  It will be both pretty and useful someday... 
+          AMR 10/28/24 9:59am: Initial site features a minimalistic design in an effort to prioritize function and accessibility.  Later updates will hopefully make it prettier.   
         </p>
       </aside>
 
@@ -66,7 +65,7 @@
     <footer>
       <section>
         <p>
-          Page/Site Issues/Questions? Make a pull request on our
+          Is something broken?  If you have any site issues or questions, or just want to say "Hi"... Make a pull request on our
           <a
             href="https://github.com/ARomano79/KAH-Staff-Reference-Guide"
             target="_blank"
@@ -75,9 +74,9 @@
             GitHub Repo</a
           >
           or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
-        </p>order to prioritize making training materials
+        </p>
       </section>
-      <p>&#169; &#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
+      <p>&#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
     </footer>
   </body>
   <script src="/src/main.js"></script>
