--- a/src/co-vet/co-vet-ai-training.html
+++ b/src/co-vet/co-vet-ai-training.html
@@ -45,18 +45,20 @@
 
     <main>
       <h4>Co-Vet AI</h4>
-      <ul class="content-list">
-        <li><a href="rec-videos.html">Recommended videos</a></li>
-        <li>
-          <a href="soap-questions-prompts.html">Prompts & SOAP Questions</a>
-          <br>
-          (open in exam room)
-        </li>
-        <!-- 
-        <li><a href="co-vet-other.html">Other materials </a></li>
-        -->
-      </ul>
-
+      <section>
+        <ul class="content-list">
+          <li><a href="rec-videos.html">Recommended videos</a></li>
+          <li>
+            <a href="soap-questions-prompts.html">Prompts & SOAP Questions</a>
+            <br>
+            (open in exam room)
+          </li>
+          <!-- 
+          <li><a href="co-vet-other.html">Other materials </a></li>
+          -->
+        </ul>
+      </section>
+      </main>
       <footer>
         <section>
           <p>
@@ -71,7 +73,7 @@
             or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
           </p>
         </section>
-        <p>&#169; &#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
+        <p>&#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
       </footer>
     </body>
     <script src="/src/main.js"></script>
