--- a/src/co-vet/rec-videos.html
+++ b/src/co-vet/rec-videos.html
@@ -42,98 +42,89 @@
       </section>
     </header>
 
-
     <main>
       <h4>Co-Vet AI</h4>
       <h6>Recommended videos</h6>
-
-      <ul class="actual-content">
-        <li>Start on the “<a
+      <section class="video-list">
+        <p>Start on the “<a
             href="
             https://help.co.vet/how-do-i-get-started-with-covet"
             target="_blank"
             rel="noopener"
             >Getting Started</a
-          >” page, and watch the intro video first.
-        </li>
-        <li>
-          Next, watch the following 3 videos from the list below the intro video.
-          <ul class="list-content">
-            <li>
-              <a
-                href="https://help.co.vet/how-do-i-create-a-medical-record-from-an-audio-recording"
-                target="_blank"
-                rel="noopener"
-                >How do I create a medical record from an audio recording?</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://help.co.vet/how-do-i-summarize-a-medical-history-or-other-pdf"
-                target="_blank"
-                rel="noopener"
-              >
-                How do I summarize a medical history or other PDF?</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://help.co.vet/how-do-i-export-my-records-to-my-practice-management-software"
-                target="_blank"
-                rel="noopener"
-              >
-                How do I export records to my practice management software?</a
-              >
-               <ul class="list-content">
-                <li>We will have to use the copy/paste method as shown here, as
-                  Co-Vet is not able to be integrated into Avimark automatically
-                  (...yet).</li>
-               </ul>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Skip the rest of the videos on that list for now (templates, etc) and
-          jump to these instead…
-          <ul class="list-content">
-            <li>
-              <a
-                href="https://help.co.vet/how-do-i-use-covet-to-summarize-a-phone-call-with-a-client-or-other-client-communication"
-                target="_blank"
-                rel="noopener"
-                >Using Co-Vet for client calls/communication</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://help.co.vet/how-can-i-transfer-a-recording-from-one-case-to-another"
-                target="_blank"
-                rel="noopener"
-                >Transferring recordings from one case to another</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://help.co.vet/how-do-i-generate-records-for-multiple-patients-seen-together-in-a-single-consultation"
-                target="_blank"
-                rel="noopener"
-                >Generating Multi-Pet records in Co-Vet</a
-              >
-            </li>
-          </ul>
-        </li>
-        <li>
-          Advanced/Admin training (coming soon)
-          <ul class="list-content">
-            <li>
-              Templates - only worry about for now if you need to work on
-              templates/snippets, etc.
-            </li>
-            <li>Additional formatting (may include with templates)</li>
-            <li>Teams - personally still need to watch these myself (AMR)</li>
-          </ul>
-        </li>
-      </ul>
+          >” page, and watch the intro video first, and then watch the following 3 videos from the list below the intro video.</p>  
+            <ul>
+              <li>
+                <a
+                  href="https://help.co.vet/how-do-i-create-a-medical-record-from-an-audio-recording"
+                  target="_blank"
+                  rel="noopener"
+                  >How do I create a medical record from an audio recording?</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://help.co.vet/how-do-i-summarize-a-medical-history-or-other-pdf"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  How do I summarize a medical history or other PDF?</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://help.co.vet/how-do-i-export-my-records-to-my-practice-management-software"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  How do I export records to my practice management software?</a
+                >
+                <br>
+                <span class="comment">(Note:  We currently have to use the copy/paste method as shown here, as Co-Vet is not able to be integrated into Avimark (yet...)).</span>
+          </li>
+            </ul>
+            <p>Skip the rest of the videos on that list for now (templates, etc) and
+              jump to these instead…</p>
+              <ul>
+                <li>
+                  <a
+                    href="https://help.co.vet/how-do-i-use-covet-to-summarize-a-phone-call-with-a-client-or-other-client-communication"
+                    target="_blank"
+                    rel="noopener"
+                    >Using Co-Vet for client calls /communication</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://help.co.vet/how-can-i-transfer-a-recording-from-one-case-to-another"
+                    target="_blank"
+                    rel="noopener"
+                    >Transferring recordings from one case to another</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://help.co.vet/how-do-i-generate-records-for-multiple-patients-seen-together-in-a-single-consultation"
+                    target="_blank"
+                    rel="noopener"
+                    >Generating Multi-Pet records in Co-Vet</a
+                  >
+                </li>
+              </ul>
+
+              <p>Advanced/Admin training (coming soon)</p>
+        <ul>
+          <li>
+            Templates - only worry about for now if you need to work on
+            templates/snippets, etc.
+          </li>
+          <li>Additional formatting (may include with templates)</li>
+          <li>Teams - personally still need to watch these myself (AMR)</li>
+        </ul>
+
+      </section>
+   
+      </main>
 
       <footer>
         <section>
@@ -149,7 +140,7 @@
             or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
           </p>
         </section>
-        <p>&#169; &#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
+        <p>&#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
       </footer>
     </body>
     <script src="/src/main.js"></script>
