--- a/src/co-vet/soap-questions-prompts.html
+++ b/src/co-vet/soap-questions-prompts.html
@@ -46,7 +46,6 @@
     <main>
       <h4>Co-Vet AI</h4>
       <h6>Prompts & SOAP Questions</h6>
-
       <p>
         Open this section during exams/recording in CoVet. AI is prompt
         oriented, and these questions (or similar) can help us assess as many
@@ -1380,7 +1379,7 @@
             or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
           </p>
         </section>
-        <p>&#169; &#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
+        <p>&#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
       </footer>
     </body>
     <script src="/src/main.js"></script>
