started soap page layout.  info is present but layout still sucks.

--- a/src/co-vet/soap-questions-prompts.html
+++ b/src/co-vet/soap-questions-prompts.html
@@ -74,11 +74,11 @@
       </section>
 
       <h6>SOAP LIST</h6>
-      <ul class="soap-list">
+      <ul class="content-list">
         <!-- USE FOR PAGE LIST/NAV/LINKING -->
         <li>
           General/Standard
-          <ul class="soap-sub-list">
+          <ul class="soap-list">
             <li><a href="#soap-qs-medical">Medical</a></li>
             <li><a href="#soap-qs-med-prog">Med Progress</a></li>
             <li><a href="#soap-qs-tech">Tech</a></li>
@@ -87,7 +87,7 @@
         </li>
         <li>
           Annual Wellness
-          <ul class="soap-sub-list">
+          <ul class="soap-list">
             <li><a href="#soap-qs-awk9">Junior K9</a></li>
             <li><a href="#soap-qs-awfel">Junior Feline</a></li>
             <li><a href="#soap-qs-awsk9">Senior K9</a></li>
@@ -96,7 +96,7 @@
         </li>
         <li>
           Establish Care
-          <ul class="soap-sub-list">
+          <ul class="soap-list">
             <li><a href="#soap-qs-est-care-ak9">Adult K9</a></li>
             <li><a href="#soap-qs-est-care-puppy">Puppy</a> (new Client/new Pt)</li>
             <li><a href="#soap-qs-est-care-afel">Adult Feline</a></li>
@@ -105,7 +105,7 @@
         </li>
         <li>
           Life Stages
-          <ul class="soap-sub-list">
+          <ul class="soap-list">
             <li><a href="#soap-qs-puppy">Puppy</a></li>
             <li><a href="#soap-qs-kitten">Kitten</a></li>
             <li><a href="#soap-qs-paps">PAP - spay</a></li>
@@ -117,7 +117,7 @@
         </li>
         <li>
           Specific Conditions
-          <ul class="soap-sub-list">
+          <ul class="soap-list">
             <li><a href="#soap-qs-eyes">Eyes</a></li>
             <li><a href="#soap-qs-ears">Ears</a></li>
             <li><a href="#soap-qs-derm">Derm/Skin</a> (Itching)</li>
