got rid of bullet points on soap page, worked on buttons/links more (NOT NAV BAR!!!!  DON"T TOUCH THAT!!!)

--- a/src/co-vet/rec-videos.html
+++ b/src/co-vet/rec-videos.html
@@ -129,7 +129,7 @@
       <footer>
         <section>
           <p>
-            Page/Site Issues/Questions? Make a pull request on our
+            Is something broken?  If you have any site issues or questions, or just want to say "Hi"... Make a pull request on our
             <a
               href="https://github.com/ARomano79/KAH-Staff-Reference-Guide"
               target="_blank"
