--- a/src/co-vet/soap-questions-prompts.html
+++ b/src/co-vet/soap-questions-prompts.html
@@ -82,7 +82,7 @@
             <li><a href="#soap-qs-medical">Medical</a></li>
             <li><a href="#soap-qs-med-prog">Med Progress</a></li>
             <li><a href="#soap-qs-tech">Tech</a></li>
-            <li><a href="#soap-qs-obj">Objective Prompts</a> (for Drs)</li>
+            <li><a href="#soap-qs-obj">Objective Prompts</a> <span class="comment">(Drs.)</span></li>
           </ul>
         </li>
         <li>
@@ -98,9 +98,9 @@
           Establish Care
           <ul class="soap-list">
             <li><a href="#soap-qs-est-care-ak9">Adult K9</a></li>
-            <li><a href="#soap-qs-est-care-puppy">Puppy</a> (new Client/new Pt)</li>
+            <li><a href="#soap-qs-est-care-puppy">Puppy</a> <span class="comment">(new Client/new Pt)</span></li>
             <li><a href="#soap-qs-est-care-afel">Adult Feline</a></li>
-            <li><a href="#soap-qs-est-care-kitten">Kitten</a> (new Client/new Pt)</li>
+            <li><a href="#soap-qs-est-care-kitten">Kitten</a> <span class="comment">(new Client/new Pt)</span></li>
           </ul>
         </li>
         <li>
@@ -120,7 +120,7 @@
           <ul class="soap-list">
             <li><a href="#soap-qs-eyes">Eyes</a></li>
             <li><a href="#soap-qs-ears">Ears</a></li>
-            <li><a href="#soap-qs-derm">Derm/Skin</a> (Itching)</li>
+            <li><a href="#soap-qs-derm">Derm/Skin</a> <span class="comment">(Itching)</span></li>
             <li><a href="#soap-qs-vomiting">Vomiting</a></li>
             <li><a href="#soap-qs-diarrhea">Diarrhea</a></li>
             <li><a href="#soap-qs-urinary">Urinary</a></li>
@@ -1366,19 +1366,19 @@
 
 
           <footer>
-        <section>
-          <p>
-            Page/Site Issues/Questions? Make a pull request on our
-            <a
-              href="https://github.com/ARomano79/KAH-Staff-Reference-Guide"
-              target="_blank"
-              rel="noopener"
-            >
-              GitHub Repo</a
-            >
-            or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
-          </p>
-        </section>
+            <section>
+              <p>
+                Is something broken?  If you have any site issues or questions, or just want to say "Hi"... Make a pull request on our
+                <a
+                  href="https://github.com/ARomano79/KAH-Staff-Reference-Guide"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  GitHub Repo</a
+                >
+                or <a href="mailto:amie.romano79@gmail.com">email me</a><span>😉</span>
+              </p>
+            </section>
         <p>&#169; <span id="#current-year"></span> KAH Staff Training/Reference Guide | site created by Amie Romano, LVT</p>
       </footer>
     </body>
