--- a/src/co-vet/co-vet-ai-training.html
+++ b/src/co-vet/co-vet-ai-training.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>KAH Staff Training/Reference Guide | Home</title>
+    <title>KAH Staff Training/Reference Guide | Co-Vet AI</title>
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
